switching up some things

--- a/review/flexbox.html
+++ b/review/flexbox.html
@@ -4,16 +4,43 @@
         <title>Flexbox Review</title>
     </head>
     <body>
-        <h1>Flexbox</h1>
+        <header>    
+            <h1>Flexbox</h1>
+            <p>Demo of flexbox</p>
+        </header>
+        <main>
+            <section>
+                <h2>First section</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sunt obcaecati eveniet cupiditate nam quaerat ipsa fugit similique perferendis distinctio animi libero, cum quod? Et dolores eos mollitia. Ex, inventore?</p>
+            </section>
+            <section>
+                <h2>Other Topics</h2>
+                <article>
+                    <h3>Title Here</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam labore culpa, quidem soluta possimus, debitis dolorum necessitatibus ea ullam maiores velit, ad optio esse. Sunt dolorum molestias porro amet saepe! Veniam eos, reprehenderit facilis quas fugit nesciunt pariatur adipisci voluptatem.</p>
+                </article>
+                <article>
+                    <h3>Title Here</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam labore culpa, quidem soluta possimus, debitis dolorum necessitatibus ea ullam maiores velit, ad optio esse. Sunt dolorum molestias porro amet saepe! Veniam eos, reprehenderit facilis quas fugit nesciunt pariatur adipisci voluptatem.</p>
+                </article>
+                <article>
+                    <h3>Title Here</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam labore culpa, quidem soluta possimus, debitis dolorum necessitatibus ea ullam maiores velit, ad optio esse. Sunt dolorum molestias porro amet saepe! Veniam eos, reprehenderit facilis quas fugit nesciunt pariatur adipisci voluptatem.</p>
+                </article>
+            </section>
+        </main>
         <hr>
-        <section class="flex">
+
+
+        <!-- <section class="flex">
             <img src="img/car.jpg" alt="vehicle 1">
             <img src="img/car.jpg" alt="vehicle 2">
             <img src="img/car.jpg" alt="vehicle 3">
             <img src="img/car.jpg" alt="vehicle 4">
             <img src="img/car.jpg" alt="vehicle 5">
             <img src="img/car.jpg" alt="vehicle 6">
-        </section>
+        </section> -->
+
     </body>
     <style>
         .flex {
@@ -35,6 +62,9 @@
         }
         hr {
             margin-bottom: 30px;
+        }
+        article {
+            width: 400px;
         }
     </style>
 </html>
