--- a/review/index.html
+++ b/review/index.html
@@ -5,59 +5,61 @@
         <!-- Note to self: Learn how to create SEO / meta tags -->
     </head>
     <body>
-        <main>
+        <main class='right'>
             <h2>Random Title</h2>
             <p>This page will be used to review html elements on a isolated page.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur tenetur dolorum omnis laboriosam similique. Minus esse quis sunt, libero deserunt optio dignissimos corrupti dolor sequi dicta! Quis ipsum voluptatum nostrum suscipit eius placeat aliquid a repellendus officiis! Magnam exercitationem, cumque ullam doloremque inventore rem sit itaque esse. Sunt, totam amet.</p>
         </main>
-        <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni dignissimos officiis quos facilis omnis, minus accusantium veniam vero! Ea voluptas obcaecati sequi consectetur voluptate sed veritatis magni repellat ducimus nam?</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda vitae exercitationem accusamus facere voluptas necessitatibus laboriosam nesciunt temporibus, voluptatibus perspiciatis mollitia nostrum facilis laborum quidem ab unde voluptatem ipsa enim!</p>
-        </section>
-        <section>
-            <header>
-                <h3>Table of Random</h3>
-            </header>
-            <table>
-                <thead>
-                    <tr>
-                        <th>name</th>
-                        <th>color</th>
-                        <th>message</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>joe</td>
-                        <td>blue</td>
-                        <td>"nothing to see here"</td>
-                    </tr>
-                    <tr>
-                        <td>milly</td>
-                        <td>red</td>
-                        <td>"no one left to cry"</td>
-                    </tr>
-                    <tr>
-                        <td>tina</td>
-                        <td>green</td>
-                        <td>"its always my birthday"</td>
-                    </tr>
-                    <tr>
-                        <td>bryce</td>
-                        <td>grey</td>
-                        <td>"why bother"</td>
-                    </tr>
-                    <tr>
-                        <td>dean</td>
-                        <td>black</td>
-                        <td>"always share your blessings"</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+        <div class='left'>
+            <section>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni dignissimos officiis quos facilis omnis, minus accusantium veniam vero! Ea voluptas obcaecati sequi consectetur voluptate sed veritatis magni repellat ducimus nam?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda vitae exercitationem accusamus facere voluptas necessitatibus laboriosam nesciunt temporibus, voluptatibus perspiciatis mollitia nostrum facilis laborum quidem ab unde voluptatem ipsa enim!</p>
+            </section>
+            <section>
+                <header>
+                    <h3>Table of Random</h3>
+                </header>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>name</th>
+                            <th>color</th>
+                            <th>message</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>joe</td>
+                            <td>blue</td>
+                            <td>"nothing to see here"</td>
+                        </tr>
+                        <tr>
+                            <td>milly</td>
+                            <td>red</td>
+                            <td>"no one left to cry"</td>
+                        </tr>
+                        <tr>
+                            <td>tina</td>
+                            <td>green</td>
+                            <td>"its always my birthday"</td>
+                        </tr>
+                        <tr>
+                            <td>bryce</td>
+                            <td>grey</td>
+                            <td>"why bother"</td>
+                        </tr>
+                        <tr>
+                            <td>dean</td>
+                            <td>black</td>
+                            <td>"always share your blessings"</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </div>
 
         <!-- TODO: Learn a better technique to implement the footer -->
-        <footer>
+        <footer class="fix">
             <div>
                 <h4>fake logo</h4>
             </div>
@@ -124,6 +126,19 @@
             display: inline-block;
             padding-left: 250px;
             width: 600px;
+        }
+        .left {
+            float: left;
+            margin: 10px;
+        }
+        .right {
+            margin: 10px;
+            float: right;
+        }
+        .fix {
+            display: table;
+            clear: both;
+            content: "";
         }
     </style>
 </html>
