--- a/review/index.html
+++ b/review/index.html
@@ -85,6 +85,7 @@
             background-color: hsl(55, 65%, 92%);
             border: solid rgba(1, 1, 1, .4) 2px;
             padding: 20px;
+            max-width: 800px;
         }
         main h2 {
             text-align: center;
@@ -129,10 +130,10 @@
         }
         .left {
             float: left;
-            margin: 10px;
+            /* margin: 10px; */
         }
         .right {
-            margin: 10px;
+            /* margin: 10px; */
             float: right;
         }
         .fix {
