--- a/project/index.html
+++ b/project/index.html
@@ -17,14 +17,17 @@
                 <input type="text" id="list_animal_enclosure" name="animal" placeholder="enclosure"/>
                 <button id="addAnimal" onclick="addAnimal()">Add Animal</button>
                 <p id='rules'>You need to select an animal from the list, and choose one of the remaining enclosures to place the animal.</p>
-                <section id="animal">
+                <section id="animals">
+                    <h2>Animals you placed in an enclosure: </h2>
                     <table>
                         <thead>
-                            <th>Species</th>
-                            <th>Enclosure</th>
+                            <tr>
+                                <th>Species</th>
+                                <th>Enclosure</th>
+                                <th>Rating</th>
+                            </tr>
                         </thead>
-                        <tbody>
-
+                        <tbody id="addData">
                         </tbody>
                     </table>
                 </section>
@@ -37,6 +40,9 @@
                 margin: 20px 0;
                 /* border: solid blue 1px; */
                 border-bottom: solid black 2px;
+            }
+            #animals {
+                display: none;
             }
             #rules {
                 display: none;
@@ -87,8 +93,17 @@
                 //FIX THIS CODE HERE
                 animals.splice(species.indexOf(animal_species), 1);
                 animals.splice(enclosure.indexOf(animal_enclosure), 1);
+                document.getElementById('animals').style.display = 'block';
             }
 
+            var p = document.getElementById('addData');
+            var row = document.createElement('tr');
+            var col = document.createElement('td');
+            var text = document.createTextNode(animals[2]);
+            row.appendChild(col);
+            row.appendChild(col);
+            row.appendChild(col);
+            p.appendChild(row);
 
             function createPotentialAnimals() {
                 var rand = Math.floor(Math.random() * 9);
