finished separation of concerns for everything

--- a/project/index.html
+++ b/project/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Testing</title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <header>
@@ -33,40 +34,6 @@
                 </section>
             </section>
         </main>
-
-        <style>
-            #potential-animals, #enclosures {
-                padding: 20px 0 20px 50px;
-                margin: 20px 0;
-                /* border: solid blue 1px; */
-                border-bottom: solid black 2px;
-            }
-            #animals {
-                display: none;
-            }
-            #done {
-                z-index: 2;
-                background-color:rgb(61, 202, 68);
-                text-align: center;
-                font-weight: bold;
-                font-size: 20px;
-                padding: 20%;
-
-                position: absolute;
-                top: 20%;
-                right: 0;
-                left: 0;
-                display: none;
-            }
-            #rules {
-                display: none;
-                background-color: rgb(202, 70, 61);
-                border: solid black 2px;
-                font-weight: bold;
-                font-size: 12px;
-                padding: 10px;
-            }
-        </style>
 
         <script src="main.js"></script>
     </body>
