--- a/review/colors.html
+++ b/review/colors.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Personal Color Palette</title>
+        <link rel="stylesheet" href="css/colors.css">
     </head>
     <body>
         <h1>Collection of my favorite colors</h1>
@@ -23,54 +24,4 @@
             </aside>
         </div>
     </body>
-    <style>
-        div {
-            width: 600px;
-            height: 25px;
-            border-radius: 5px;
-            margin: 30px;
-            padding: 10px;
-        }
-        h1 {
-            text-align: center;
-        }
-        #colors {
-            display: flex;
-        }
-        #c-primary {
-            background-color: #402ee0;
-        }
-        #c-warning {
-            background-color: #b63333;
-            height: 300px;
-        }
-        #c-success {
-            background-color: #33b633;
-            height: 300px;
-        }
-        #c-black {
-            background-color: #262229;
-        }
-        #c-grey {
-            background-color: #1f1b22ad;
-        }
-        #c-white {
-            background-color: #cfd7da;
-        }
-        #c-blue {
-            background-color: #1e39b4;
-        }
-        #c-bluel {
-            background-color: #2f76e0;
-        }
-        #c-purple {
-            background-color: #9131c9;
-        }
-        #c-purplel {
-            background-color: #871fc494;
-        }
-        #c- {
-            background-color: #b6338f;
-        }
-    </style>
 </html>
