--- a/review/flexbox.html
+++ b/review/flexbox.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Flexbox Review</title>
+        <link rel="stylesheet" href="css/flexbox.css">
     </head>
     <body>
         <header>    
@@ -42,29 +43,4 @@
         </section> -->
 
     </body>
-    <style>
-        .flex {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        section img {
-            margin: 10px;
-            width: 350px;
-            transition: 1s;
-        }
-        section img:hover {
-            transform: scale(1.1);
-            border: solid black 1px;
-        }
-        h1 {
-            text-align: center;
-        }
-        hr {
-            margin-bottom: 30px;
-        }
-        article {
-            width: 400px;
-        }
-    </style>
 </html>
