--- a/review/index.html
+++ b/review/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>test</title>
+        <link rel="stylesheet" href="css/index.css">
         <!-- Note to self: Learn how to create SEO / meta tags -->
     </head>
     <body>
@@ -70,76 +71,4 @@
             </ul>
         </footer>
     </body>
-    <style>
-        * {
-            margin: 0;
-            box-sizing: border-box;
-            /* padding: 0; */
-        }
-
-        main, section {
-            margin: 40px auto;
-            max-width: 800px;
-        }
-        main {
-            background-color: hsl(55, 65%, 92%);
-            border: solid rgba(1, 1, 1, .4) 2px;
-            padding: 20px;
-            max-width: 800px;
-        }
-        main h2 {
-            text-align: center;
-        }
-        table {
-            margin: auto;
-        }
-        th {
-            text-transform: uppercase;
-            padding: 10px;
-            border-bottom: solid grey 0.1px;
-        }
-        td {
-            padding: 10px;
-        }
-        tr:nth-child(even){
-            background-color: rgb(195, 228, 178);
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-        footer ul {
-            display: inline-block;
-        }
-        footer ul li {
-            display: inline-block;
-            list-style: none;
-            padding: 20px;
-        }
-        footer ul li a {
-            color: white;
-            text-decoration: none;
-        }
-        footer div {
-            display: inline-block;
-            padding-left: 250px;
-            width: 600px;
-        }
-        .left {
-            float: left;
-            /* margin: 10px; */
-        }
-        .right {
-            /* margin: 10px; */
-            float: right;
-        }
-        .fix {
-            display: table;
-            clear: both;
-            content: "";
-        }
-    </style>
 </html>
