--- a/review/grid.html
+++ b/review/grid.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Grid</title>
+        <link rel="stylesheet" href="css/grid.css">
     </head>
     <body>
         <h1>Grid</h1>
@@ -65,70 +66,4 @@
             </section>
         </div>
     </body>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1.2fr 1.5fr;
-            grid-template-rows: 1fr 4fr 3fr 2fr;
-            height: 100vh;
-            margin: 2em;
-        }
-        main {
-            grid-column-start: 1;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            background-color: orange;
-        }
-        header {
-            grid-column-start: 3;
-            grid-column-end: 4;
-            grid-row-start: 1;
-            grid-row-end: 2;
-            background-color: aquamarine;
-        }
-        .num {
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start: 3;
-            grid-row-end: 4;
-            background-color: yellow;
-        }
-        .yum {
-            grid-column: 2 / 3;
-            grid-row: 3 / 4;
-            background-color: rgb(117, 1, 1);
-            color: white;
-        }
-        .diabetes {
-            grid-column: 1 / 3;
-            grid-row: 4 / 5;
-            background-color: blue;
-            color: white;
-        }
-        .candy {
-            grid-column: 3 / 4;
-            grid-row: 2 / 5;
-            background-color: purple;
-            color: white;
-        }
-        section, main {
-            padding-top: 20px;
-        }
-        p {
-            padding: 0 20px;
-        }
-        #demo-box {
-            text-align: center;
-        }
-        #demo-box table {
-            margin: 10px;
-        }
-        h2 {
-            text-align: center;
-        }
-    </style>
 </html>
