--- a/todo/index.html
+++ b/todo/index.html
@@ -6,28 +6,97 @@
     <body>
         <main>
             <h1>Todo List Application</h1>
-            <form>
-                <input type="text" id="item">
-            </form>
-            <button onclick="addTask()">Add Task</button>
+            <h2>By: l-burrell on github</h2>
+            <section id="form">
+                <form >
+                    <input type="text" id="item">
+                </form>
+                <button onclick="addTask()">Add Task</button>
+            </section>
         </main>
         <div id="list_items"></div>
+        <div id="advice">
+            <h3>READ FIRST - To use this application:</h3>
+            <p>Note 1: Once you begin checking tasks off the list the "add task" button will be removed.</p>
+            <p>Note 2: Refreshing the page will remove all content, take a screenshot if you need this list to be recorded. No data will be saved on your system otherwise.</p>
+            <p>Note 3: You must type in the task, then press the "add task" button. Empty tasks cannot be submitted.</p>
+        </div>
         <script>
+            // DEAR DEVELOPERS, THIS CODE IS NOT FOR REUSE OR REDISTRIBUTION
+            // THANKS FOR VIEWING
+            
+            var tasks = [];
+            var list_items = document.getElementById("list_items");
+            var form = document.getElementById("form");
+
             function addTask(){
                 var item = document.getElementById("item").value;
-                let p = document.createElement("p");
-                let text = document.createTextNode(item);
-                let 
-                p.appendChild(text);
-                let list_items = document.getElementById("list_items");
-                list_items.appendChild(p);
+                if(item === ""){
+                    return ;
+                }
+                tasks.push(item);
+                clear();
+                display();
+            }
+
+            function display(){
+                list_items.innerHTML = "";
+                for(itemNumber = 0; itemNumber < tasks.length; itemNumber++){
+                    let p = document.createElement("p");
+                    p.onclick = function(){
+                        // this.parentElement.removeChild(this);
+                        p.style.backgroundColor = "rgb(173, 245, 173)";
+                        p.style.textDecorationLine = "line-through";
+                        p.style.fontStyle = "italic";
+                        form.style.display = "none";
+                    }
+                    let text = document.createTextNode(itemNumber+1 + ". " + tasks[itemNumber]);
+                    p.appendChild(text);
+                    list_items.appendChild(p); 
+                }
+            }
+
+            function clear() {
+                var item = document.getElementById("item").value = "";
             }
         </script>
         <style>
             form {
                 display: inline-block;
             }
-            
+            div {
+                margin: auto;
+            }
+            p {
+                background-color: hsl(352, 80%, 80%);
+                border: solid black 2px;
+                padding: 20px;
+                font-size: 20px;
+            }
+            p:hover {
+                background-color: hsl(61, 73%, 78%);
+            }
+            #advice {
+                border: solid black 2px;
+                padding: 10px;
+                margin: 10px 0;
+            }
+            #advice h3 {
+                margin: 0;
+                border-bottom: solid black 1px;
+            }
+            #advice p {
+                background-color: white;
+                border: none;
+                padding: 0;
+                font-size: 12px;
+            }
+            h2 {
+                font-size: 10px;
+                padding: 8px;
+                margin-top: -35px;
+                margin-bottom: 30px;
+            }
         </style>
     </body>
 </html>
