--- a/review/skills.html
+++ b/review/skills.html
@@ -72,6 +72,18 @@
                     <td>decent</td>
                     <td>N/A</td>
                 </tr>
+                <tr>
+                    <td>Vue</td>
+                    <td>beginner</td>
+                    <td>N/A</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>React</td>
+                    <td>N/A</td>
+                    <td>N/A</td>
+                    <td>N/A</td>
+                </tr>
             </tbody>
         </table>
     </body>
