--- a/review/javascript1.html
+++ b/review/javascript1.html
@@ -14,6 +14,18 @@
             <br/>
         </div>
     </body>
+    <style>
+        div {
+            background-color: hsl(66, 56%, 68%);
+            padding: 20px;
+            margin: 10%;
+        }
+        h1 {
+            text-align: center;
+        }
+
+
+    </style>
     <script>
         document.write("Hello World <br/>");
         console.log('Hello World')
