--- a/project3/index.html
+++ b/project3/index.html
@@ -9,6 +9,10 @@
 <body>
     <main>
         <h1>Does it feel warm in here?</h1>
+        <section>
+            <button id="btnhot">Im on fire!</button>
+            <button id="btncold">I still have cold feet..</button>
+        </section>
     </main>
 </body>
 </html>
