--- a/project3/index.html
+++ b/project3/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <main>
-        <h1>Does it feel warm in here?</h1>
-        <section>
+        <h1 id="title">Does it feel warm in here?</h1>
+        <section id="welcome">
             <button id="btnhot">Im on fire!</button>
             <button id="btncold">I still have cold feet..</button>
+        </section>
+        <section id="game">
+            <section id="rules">
+                <h3>Okay folks, the instructions are simple!</h3>
+                <p>TIP 1: You must guess a number from 1 to 100.</p>
+                <p>TIP 2: You must watch the color to determine if you are hot or cold.</p>
+                <p>TIP 3: When it is a deep red, you are on fire! And close to winning! </p>
+                <p>TIP 4: When it is blue, you are far away from the correct answer.</p>
+            </section>
         </section>
     </main>
 </body>
