--- a/project3/index.html
+++ b/project3/index.html
@@ -21,7 +21,7 @@
                 <p>TIP 3: When it is a deep red, you are on fire! And close to winning! </p>
                 <p>TIP 4: When it is blue, you are far away from the correct answer.</p>
             </section>
-            <section>
+            <section id="board">
                 <form>
                     <input type="text" id="guessNum">
                     <button>Guess</button>
