finished functionality for f/c game

--- a/project3/index.html
+++ b/project3/index.html
@@ -14,6 +14,14 @@
             <button id="btnhot" onclick="beginGame()">Im on fire!</button>
             <button id="btncold" onclick="coldFeet()">I still have cold feet..</button>
         </section>
+        <section id="cold">
+            <p>Oh, you have cold feet huh? No worries, Its easy to beat this game!</p>
+            <p>Your main goal is to fine the number the computer generates for you! One strategy you can take is to make a random guess to start near the number limits (ie: near 1 or 100). If your first guess sent you into the blue, then try adding/subtracting 50 from that number. When you hit the orange, you are in a good position to cut that number in half by playing with values of 10-15. </p>
+            <section>
+                <p>Ready to try your hand at the game now?</p>
+                <button onclick="beginGame()">Lets Play</button>
+            </section>
+        </section>
         <section id="game">
             <section id="rules">
                 <h3>Okay folks, the instructions are simple!</h3>
