--- a/project4/index.html
+++ b/project4/index.html
@@ -19,24 +19,24 @@
         <section id="calculator">
             <section id="digits">
                 <section id="">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button id="btn1">1</button>
+                    <button id="btn2">2</button>
+                    <button id="btn3">3</button>
                 </section>
                 <section>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
+                    <button id="btn4">4</button>
+                    <button id="btn5">5</button>
+                    <button id="btn6">6</button>
                 </section>
                 <section>
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
+                    <button id="btn7">7</button>
+                    <button id="btn8">8</button>
+                    <button id="btn9">9</button>
                 </section>
                 <section>
-                    <button>0</button>
-                    <button>.</button>
-                    <button id="enter">Enter</button>
+                    <button id="btn0">0</button>
+                    <button id="btnDecimal">.</button>
+                    <button id="btnEnter">Enter</button>
                 </section>
             </section>
             <section id="controls">
