mini math calc project - functionality in progress

--- a/project4/index.html
+++ b/project4/index.html
@@ -13,39 +13,40 @@
         <h3>By l-burrell</h3>
         <section id="display">
             <form>
-                <input type="text" placeholder="Display here">
+                <input type="text" id="data" placeholder="Display here">
             </form>
         </section>
         <section id="calculator">
             <section id="digits">
                 <section id="">
-                    <button id="btn1">1</button>
-                    <button id="btn2">2</button>
-                    <button id="btn3">3</button>
+                    <button id="btn1" onclick="putValue(btn1)">1</button>
+                    <button id="btn2" onclick="putValue(btn2)">2</button>
+                    <button id="btn3" onclick="putValue(btn3)">3</button>
                 </section>
                 <section>
-                    <button id="btn4">4</button>
-                    <button id="btn5">5</button>
-                    <button id="btn6">6</button>
+                    <button id="btn4" onclick="putValue(btn4)">4</button>
+                    <button id="btn5" onclick="putValue(btn5)">5</button>
+                    <button id="btn6" onclick="putValue(btn6)">6</button>
                 </section>
                 <section>
-                    <button id="btn7">7</button>
-                    <button id="btn8">8</button>
-                    <button id="btn9">9</button>
+                    <button id="btn7" onclick="putValue(btn7)">7</button>
+                    <button id="btn8" onclick="putValue(btn8)">8</button>
+                    <button id="btn9" onclick="putValue(btn9)">9</button>
                 </section>
                 <section>
-                    <button id="btn0">0</button>
-                    <button id="btnDecimal">.</button>
-                    <button id="btnEnter">Enter</button>
+                    <button id="btn0" onclick="putValue(btn0)">0</button>
+                    <button id="btnDecimal" onclick="putValue(btnDecimal)">.</button>
+                    <button id="btnEnter" onclick="beginCalculating()">Enter</button>
                 </section>
             </section>
             <section id="controls">
-                <button>+</button>
-                <button>-</button>
-                <button>*</button>
-                <button>/</button>
+                <button id="btnPlus" onclick="putValue(btnPlus)">+</button>
+                <button id="btnMinus" onclick="putValue(btnMinus)">-</button>
+                <button id="btnMultiply" onclick="putValue(btnMultiply)">*</button>
+                <button id="btnDivide" onclick="putValue(btnDivide)">/</button>
             </section>
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
 </html>
