--- a/project5/index.html
+++ b/project5/index.html
@@ -18,9 +18,12 @@
             <p>Simple right? Lets play!</p>
         </section>
         <section id="board">
-            <p id="description">card description goes here</p>
-            <section id="card"></section>
+            <section id="card">
+                <p id="card-description">card description goes here</p>
+                
+            </section>
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
 </html>
