update - most functionality implemented

--- a/project5/index.html
+++ b/project5/index.html
@@ -25,6 +25,11 @@
                 <p id="card-description">card description goes here</p>
             </section>
         </section>
+        <div>
+            <h3>Issues:</h3>
+            <p>1) Need more data to cycle through.</p>
+            <p>2) Ensure I dont repeat the same animals too often.</p>
+        </div>
     </main>
     <script src="main.js"></script>
 </body>
